fix: button has gap

--- a/src/components/organisms/UiList/UiList.stories.scss
+++ b/src/components/organisms/UiList/UiList.stories.scss
@@ -2,6 +2,7 @@
 
 //<Code id="list-condition-item">
 .list-condition-item {
+  --button-gap: 0;
   --button-border-start-start-radius: 0;
   --button-border-start-end-radius: 0;
   --button-border-end-start-radius: 0;
@@ -51,6 +52,7 @@
 
 //<Code id="list-with-icon-item">
 .list-with-icon-item {
+  --button-gap: 0;
   --button-border-start-start-radius: 0;
   --button-border-start-end-radius: 0;
   --button-border-end-start-radius: 0;
